inicio de configuracion del header

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
         "Botón",
+        "Camilo",
+        "Desarrollador",
         "devkit",
         "Hola",
-        "Portafolio"
+        "miportafolioweb",
+        "Portafolio",
+        "Sobre"
     ]
 }
